--- a/Specify/help/SpecifyHelp/Workbench/EditMapping.html
+++ b/Specify/help/SpecifyHelp/Workbench/EditMapping.html
@@ -39,11 +39,12 @@
   </tr>
 </table>
 <p>&nbsp;</p>
-<p>To  unmap a Column to a Field:</p>
+<p>To  unmap a column:</p>
 <ol>
   <li>Click on the column to select it </li>
   <li>Click the <img src="../images/Unmap16x16.png" alt="unmap" width="16" height="16"> (unmap) button </li>
 </ol>
+<p>&nbsp;</p>
 <p>To add a column: </p>
 <ol>
   <li>Click on the Data Type to show the Specify fields in the 'Fields' window </li>
@@ -51,7 +52,7 @@
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
 </ol>
 <p>A <img src="../images/linked_right.png" alt="link" width="32" height="16"> (link) icon will appear identifying that the column and field are the same heading. </p>
-<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check in the window to identify that they are in use. </p>
+<p><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check next to their name in the Specify field list confirming that they are in use. </p>
 <p>&nbsp; </p>
 </body>
 </html>
