--- a/Specify/help/SpecifyHelp/Workbench/GridEditing.html
+++ b/Specify/help/SpecifyHelp/Workbench/GridEditing.html
@@ -8,7 +8,7 @@
 <h2>Grid Editing</h2>
 <hr>
 <font size="-2"><br></font>
-<p>Grid Editing  enables the Data Set to be displayed and edited much like a spreadsheet. Although very similar to most spreadsheet applicaitons (i.e. MS Excel) it is not considered a replacement for  users who take advantage of many of their advanced features. Grid editing in the WorkBench does provide many tools that are  specific to the manipulation of collections management data. For example, it can be used to Georeference locality names and output KML files for Google Earth. </p>
+<p>Grid Editing  enables the Data Set to be displayed and edited much like a spreadsheet. Although the WorkBench is very similar to most spreadsheet applications (i.e. MS Excel), it  is not considered a replacement for  users who take advantage of their advanced features. Grid editing in the WorkBench does provide many tools that are  more specific to the manipulation of collections management data than these other applications. For example, it can  Georeference locality names and output KML files for Google Earth. </p>
 <p>Values within a Data Set are easily manipulated using the icons in the Workspace Item Bar:</p>
 <table width="100%" border="1">
   <tr>
@@ -32,12 +32,12 @@
   <tr>
     <td><div align="center"><img src="../images/map.png" alt="Map" width="16" height="16"></div></td>
     <td>Mapping</td>
-    <td>Plots the locality on a map. The locality is shown using this icon (pushpin). Selecting the icon displays all the collection object information. </td>
+    <td>Plots the locality on a map. The locality is shown using a pushpin icon. Selecting the icon displays all the collection object information. </td>
   </tr>
   <tr>
     <td><div align="center"><img src="../images/GoogleEarth16x16.png" alt="Google Earth" width="16" height="16"></div></td>
     <td>Google Earth</td>
-    <td>Plots the locality using Google Earth. The locality is shown using this icon (pushpin). Selecting the icon displays all the collection object information.</td>
+    <td>Plots the locality using Google Earth. The locality is shown using a pushpin icon. Selecting the icon displays all the collection object information.</td>
   </tr>
   <tr>
     <td><div align="center"><img src="../images/biogeomancer.png" alt="BioGeoMancer" width="16" height="16"></div></td>
@@ -82,50 +82,49 @@
 </table>
 <p>&nbsp;</p>
 <h3><u>Editing Cell Values </u></h3>
-<p>To edit text in a cell, click on the cell and then:</p>
+<p>To edit text in a cell, click on the cell, then:</p>
 <ul>
-  <li>Begin Typing</li>
-  <li>Press the &lt;esc&gt; or F2 buttons and type  </li>
+  <li>Begin Typing, or </li>
+  <li>Press the &lt;esc&gt; or F2 button and type  </li>
 </ul>
 <p>To complete editing in a cell:</p>
 <ul>
-  <li>Press the &lt;esc&gt; or F2 button</li>
-  <li>Press an arrow key, the &lt;tab&gt; key, or hit the &lt;return&gt; key to move to a different cell.</li>
+  <li>Press the &lt;esc&gt; or F2 button, or </li>
+  <li>Press an arrow key, the &lt;tab&gt; key, or hit the &lt;return&gt; key to move to a different cell, or </li>
   <li>Click on a different cell * </li>
 </ul>
 <p><strong>* For Mac OS X Users</strong>: The Mac OS X platform currently has a bug that  requires editing in a cell to be completed before editing can begin in a new cell. For example, if a user is editing in a cell and simply clicks inside a new cell to begin editing the edits will still write to the first cell. Edits will not write in the new cell until the first cell is completed by performing any of the three examples above. </p>
 <h3><u><a name="Carry_Forward"></a>Carry Forward</u></h3>
-<p>Carry Forward enables the value in one or more columns  to be 'carried forward' or copied to the next new row of data. To select the columns to be carried forward clicking  the <img src="../images/Configure16x16.png" width="16" height="16"> button. The following configuration window will open:  </p>
+<p>Carry Forward enables the value in one or more columns  to be 'carried forward', or copied to the next new row of data. To select the columns to be carried forward click  the <img src="../images/Configure16x16.png" width="16" height="16"> (carry forward) button. The following configuration window will open:  </p>
 <p align="center"><img src="../images/carryforwardscr.png" alt="Carry Forward"><br>
-  <span class="imgcaption">Configure Carry Forward </span></p>
-<p>&nbsp;</p>
-<p>The values in the selected column(s) are 'carried forward' into a new row when clicking on the insert row <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button. </p>
+<span class="imgcaption">Configure Carry Forward </span></p>
+<p>The values in the selected column(s) are 'carried forward' into  new rows, (new rows are added by clicking the <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button), until Carry Forward is reset. </p>
 <p>&nbsp;</p>
 <h3><u>Context Menu  Controls </u></h3>
-<p>In addition to the buttons in the Workspace the context menu provides additional actions, simply select one or more cells and then right click to display the context menu. (On a single button mouse this may be a &lt;ctrl&gt; click): </p>
+<p>In addition to the buttons in the Workspace the context menu provides additional actions. Simply select one or more cells and then right click to display the context menu. (On a single button mouse this may be a &lt;ctrl&gt; click): </p>
 <table width="100%" border="1">
   <tr>
-    <td>Clear Cell</td>
-    <td>Clears the cells that are selected. </td>
+    <td>Clear Cell(s)</td>
+    <td>Clears the cell(s) that are selected. </td>
   </tr>
   <tr>
-    <td>Delete Row</td>
-    <td>Deletes the rows (<em>Note</em>: one one cell per needs to be selected for the row to be included in the delete action). </td>
+    <td>Delete Row(s)</td>
+    <td>Deletes the row(s) that are selected. <em><strong>Note:</strong></em> one or more cells needs to be selected for the entire row to be deleted. </td>
   </tr>
   <tr>
     <td>Fill Up</td>
-    <td>Fills the selected cells  with the value from the bottom selected cell. Use this tool to copy a value into one or more cells from the bottom cell upward. </td>
+    <td>Fills the selected cells  with the value from the last selection. Use this tool to copy a value into one or more cells from the bottom cell upward. </td>
   </tr>
   <tr>
     <td>Fill Down</td>
-    <td>Fills the selected rows  with a value from the top selected cell downward. Use this tool to copy the correct value into one or more cells below. Simply sweep the correct cell along with the cells to be filled, right click on the correct cell and choose &lsquo;Fill Up&rsquo; in the pop up window. The correct value will be pasted into the selected cells.</td>
+    <td>Fills the selected cells  with a value from the top selection. Use this tool to copy a value from the top cell downward. </td>
   </tr>
 </table>
 <p>&nbsp;</p>
 <h3><u>Find Panel </u></h3>
 <p>Grid editing provides  a Find and  Find/Replace functionality. To display the &quot;Find&quot; panel you can:</p>
 <ul>
-  <li>Click on the Edit menu and then on Find</li>
+  <li>Click on the Edit menu and then on Find, or </li>
   <li>Use the keyboard shortcut for your operating system: &lt;ctrl&gt; + F on MS Windows and Linux; Command + F on the Mac. </li>
 </ul>
 <p align="center"><img src="../images/findpanel.png" alt="find panel"></p>
@@ -133,11 +132,11 @@
 <p>The Panel areas are described below:</p>
 <table width="100%" border="1">
   <tr>
-    <td>Top Text Box </td>
-    <td>The search string </td>
+    <td width="17%">Find (top) Text Box </td>
+    <td width="83%">The search string </td>
   </tr>
   <tr>
-    <td>Bottom Text Box </td>
+    <td>Replace (bottom) Text Box </td>
     <td>The replacement string </td>
   </tr>
   <tr>
@@ -167,62 +166,51 @@
 </table>
 <p>To search for a value:</p>
 <ol>
-  <li>Enter the value in the Top Text Box </li>
+  <li>Enter the value in the 'Find' Text Box </li>
   <li>Click the 'Next' button </li>
 </ol>
 <p>To replace a value:</p>
 <ol>
-  <li>Enter the search value in the Find Text Box</li>
-  <li>Enter the replacement value in the Replace Text Box</li>
+  <li>Enter the search value in the 'Find' Text Box</li>
+  <li>Enter the replacement value in the 'Replace' Text Box</li>
   <li>Click 'Next' to find the value</li>
   <li>Click 'Replace' to replace the value in the active cell</li>
   <li>Click 'Replace All' to replace all search values   </li>
 </ol>
 <p>Note: The Find Panel is ONLY availble when Grid Editing, it is not available when Form Editing. </p>
 <p>&nbsp;</p>
-<h3><u>Grid Editing Work Flows </u></h3>
-<p><u>Enter Data</u></p>
-<ol start="1" type="1">
-  <li>Click      on the Data Set to open it</li>
-  <li>Click      in a particular field to enter data</li>
-  <li>Click      the <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button or type &lt;Cntl&gt; + n to create a new row</li>
-  <li>Save      the Data Set</li>
-</ol>
-<p>&nbsp;</p>
-<p><u>Delete a Row(s):</u></p>
+<h3><u>Grid Editing Examples</u></h3>
+<p><u>Delete a Record(s):</u></p>
 <ol>
-  <li>Click on a row number or sweep multiple numbers to select them</li>
-  <li>Either right click on a cell in the row(s) and choose &lsquo;Delete Row&rsquo; from the pop up window</li>
+  <li>Select cells within the record(s) to be deleted </li>
+  <li>Either right click on a cell  and choose &lsquo;Delete Row&rsquo; from the pop up window, or click  the <img src="../images/RemoveRecord16x16.png" width="16" height="16"> (delete) button </li>
 </ol>
-<p>OR&nbsp; click on the <img src="../images/RemoveRecord16x16.png" width="16" height="16">  at the bottom of the widow</p>
 <p>&nbsp;</p>
 <p><u>Clear a Cell:</u></p>
 <ol start="1" type="1">
   <li>Click      on a cell or sweep multiple cells to select them</li>
-  <li>Either      right click on a cell and choose &lsquo;Clear Cells' from the pop up window</li>
+  <li>Either      right-click on a cell and choose &lsquo;Clear Cells' from the pop up window, or click  the <img src="../images/Clear16x16.png" width="16" height="16"> (clear) button </li>
 </ol>
-<p>OR&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
-<p>Click on the <img src="../images/Clear16x16.png" width="16" height="16"> button at the bottom of the window</p>
 <p>&nbsp;</p>
-<p><u>Add Rows:</u></p>
+<p><u>Add a Record(s):</u></p>
 <ol>
-  <li>To add      a Row after the currently selected row click the  <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button </li>
+  <li>To add      a row after the  active row click the  <img src="../images/AddNewRecord16x16.png" width="16" height="16"> (add) button </li>
 </ol>
 <p>&nbsp;</p>
 <p><u>Copy the Same Value into Multiple Cells: </u></p>
 <ol start="1" type="1">
   <li>Select more than one cell in a column </li>
-  <li>Click to display the context menu   </li>
+  <li>Right-click to display the context menu   </li>
   <li>Choose      'Fill up' to fill the bottom value upward, or 'Fill Down' to fill the top value  downward </li>
 </ol>
 <p>&nbsp;</p>
-<p><u>Add a Row with Preset Values:</u></p>
+<p><u>Add a Record with Preset Values:</u></p>
 <ol>
-  <li>Click on the <img src="../images/Configure16x16.png" width="16" height="16"> button</li>
-  <li>Select the fields that hold values to be copied into the new row</li>
+  <li>Click  the <img src="../images/Configure16x16.png" width="16" height="16"> button</li>
+  <li>Select the fields  to be copied into the new row</li>
   <li>Click the 'OK' button at the bottom of the Carry Forward window</li>
-  <li>Select the row that contains the data to be copied into the new row</li>
-  <li>Click on the <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button </li>
+  <li>Select the row  to be copied into the new row</li>
+  <li>Click  the <img src="../images/AddNewRecord16x16.png" width="16" height="16"> button </li>
 </ol>
 </body>
 </html>
