--- a/Specify/help/SpecifyHelp/Workbench/ImportImages.html
+++ b/Specify/help/SpecifyHelp/Workbench/ImportImages.html
@@ -7,15 +7,15 @@
 <body>
 <h2>Import  Images</h2>
 <hr>
-<p>The Import Images action creates a new Data Set,  reads in a group of images, and creates a record that links to each of the images inside the Data Set.  The linked images can be viewed while entering data into the DataSet.</p>
+<p>The Import Images action creates a new Data Set,  then reads in a group of images and links each one to its own record inside the new Data Set.  The linked images can be viewed while entering data into the DataSet.</p>
 <p><em>Note</em>: The 'Import Images' action is best used when entering data from scanned cards or field notes. Single, descriptive images can also be linked to existing Data Set records using the 'Image Toggle' button. This is described in the <a href="WorkingWithImages.html">Image Window</a> section of  Help. </p>
 <p>The WorkBench links images in jpg, tif, png, gif and bmp formats. </p>
 <p>Click the &lsquo;Import  Images&rsquo; action to create a new Data Set from images. </p>
 <p>A file dialog will appear that allows multiple images to be selected. Select the images to import and click 'Open'. </p>
-<p>The next dialog gives the the choice of  copying column headings from an existing Data Set or choosing them from a list of Specify fields:</p>
+<p>Next, choose   to reuse a Data Set map from an existing Data Set or create a new one:</p>
 <p align="center"><img src="../images/NewDataSet.png"></p>
 <p align="center" class="imgcaption">Data Set Column Headings </p>
-<p>To copy column headings from an existing Data Set, select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open to name and describe the new Data Set. </p>
+<p>To copy a Data Set map from an existing Data Set, select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open to name and describe the new Data Set. </p>
 <p>To choose new column headings for the new Data Set select the 'Create new Data Set mapping' button and click 'OK':</p>
 <p align="center"><img src="../images/DataSetMappingEditorClear.png" alt="Data Set Mapping Editor"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor</p>
@@ -56,7 +56,9 @@
 <p align="center" class="imgcaption">Data Set Mapping Editor with one column added </p>
 <p align="left">&nbsp;</p>
 <p align="left">Continue adding fields/columns until the 'Data Set Columns' list is complete, then click 'OK'. </p>
-<p align="left">The Data Set Properties dialog will appear, which allows the new Data Set to be named and described. </p>
+<p align="left">Complete the import process by   naming  and describing the new Data Set:</p>
+<p align="center"><img src="../images/datasetproperties.png" alt="Data Set Properties"></p>
+<p align="left">&nbsp;</p>
 <p align="left">To edit the Data Set Mapping, see <a href="EditMapping.html">Edit Data Set Mapping</a>. </p>
 <p>&nbsp;</p>
 </body>
