--- a/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
+++ b/Specify/help/SpecifyHelp/Workbench/NewDataSet.html
@@ -14,7 +14,7 @@
 <p>To  bypass  the drag and drop feature, click the New Data Set item on the Sidebar. The following dialog will appear: </p>
 <p align="center"><img src="../images/NewDataSet.png" alt="New Data Set"></p>
 <p align="center"><span class="imgcaption">New Data Set</span></p>
-<p>To copy column headings from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open, to name and describe the new Data Set. </p>
+<p>To copy a Data Set map from an existing Data Set select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open, to name and describe the new Data Set. </p>
 <p>To choose  column headings for the new Data Set select the 'Create new Data Set mapping' button and click 'OK'. The Data Set Mapping Editor will appear:</p>
 <p align="center"><img src="../images/DataSetMappingEditorClear.png" alt="Data Set Mapping Editor"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor</p>
@@ -49,14 +49,15 @@
   <li> Select a Data Type, the available fields will appear in the 'Specify Fields' window. </li>
   <li>Select a field</li>
   <li>Click the <img src="../images/Map16x16.png" alt="map" width="16" height="16"> (map) button</li>
-  <li>The new column heading will appear under both Data Set Columns and  Specify Fields(as shown below) </li>
 </ol>
+The new column heading will appear under both 'Data Set Columns' and  'Specify Fields' (as shown below).
 <p align="left">A <img src="../images/linked_right.png" width="32" height="16"> (link) icon confirms that the Specify field is mapped to the Data Set column. </p>
+<p align="left"><em><strong>Note:</strong></em> A field may only map once. Specify fields that are mapped display a green check next to their name in the Specify field list confirming that they are in use. </p>
 <p align="center"><img src="../images/DataSetMappingEditor2.png" ></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor with one column added </p>
 <p align="left">&nbsp;</p>
 <p align="left">Continue adding fields/columns until the  'Data Set Columns' list is complete, then click  'OK'. </p>
-<p align="left">The Data Set Properties dialog will  appear, which allows the new Data Set to be named and described. </p>
+<p align="left">Complete the new Data Set by   naming  and describing it:</p>
 <p align="center"><img src="../images/datasetproperties.png" alt="Data Set Properties"></p>
 <p align="center" class="imgcaption">Data Set Properties </p>
 <p align="left">To edit the Data Set Mapping, see <a href="EditMapping.html">Edit Data Set Mapping</a>. </p>
